--- a/clone_github/css/main.css
+++ b/clone_github/css/main.css
@@ -2,13 +2,17 @@
 .body__container {font-weight:400; font-size:16px; font-family:"Roboto"}
 a {text-decoration:none}
 
+/* SECTION & INNER */
+.section {position:relative}
+.section .inner {position:relative; max-width:980px; margin:0 auto; box-sizing:border-box}
+
 /* float and clearfix */
 .clearfix::after {content:""; display:block; clear:both}
 .float--left {float:left}
 .float--right {float:right}
 
 /* button */
-.btn {display:inline-flex; align-items:center; position:relative; height:34px; padding:0 12px; border:1px solid #d5d5d5; border-radius:4px; font:500 14px/1.5; color:#333; background:#eee linear-gradient(to bottom, #fcfcfc, #eee); box-sizing:border-box; cursor:pointer}
+.btn {display:flex; align-items:center; position:relative; height:34px; padding:0 12px; border:1px solid #d5d5d5; border-radius:4px; font:500 14px/1.5; color:#333; background:#eee linear-gradient(to bottom, #fcfcfc, #eee); box-sizing:border-box; cursor:pointer}
 .btn:hover::before {content:""; position:absolute; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,.07)}
 .btn.btn--primary {border:1px solid #65b836; color:#fff; background:#55a532 linear-gradient(#91dd70, #55ae2e)}
 
@@ -19,9 +23,14 @@ a {text-decoration:none}
 .input--text::-moz-input-placeholder {color:#cacaca}
 .input--text::-ms-input-placeholder {color:#cacaca}
 
+/* summary */
+.summary__title {margin-bottom:18px; font-weight:300; font-size:38px; line-height:1.25}
+.summary__description {font-weight:300; font-size:26px; line-height:1.5; color:#767676}
+
+
 /* HEADER */
 header {border-bottom:1px solid rgba(0,0,0,.75); background:#fff; box-shadow:0 0 5px rgba(0,0,0,.75)}
-header .inner {max-width:980px; height:78px; margin:0 auto}
+header .inner {height:78px}
 header .menu-group {display:flex; align-items:center; height:100%}
 header .logo {margin-right:10px}
 header .logo a {display:block; width:32px; height:32px; background:url(../image/logo.svg); text-indent:-9999px}
@@ -32,9 +41,65 @@ header .main-menu li a:hover {color:#4078c0}
 header .sign-group {display:flex; align-items:center; height:100%}
 header .btn-group {order:2; display:flex}
 header .btn-group .sign-in {margin-right:4px}
+
 #search-form {order:1; margin-right:12px}
 #search {width:160px; font-size:14px}
 #search + [type="submit"] {display:none}
 header .sub-menu {display:flex; margin-right:10px}
 header .sub-menu li a {display:block; padding:8px; font-size:13px; color:#3c4146}
 header .sub-menu li a:hover {color:#4078c0}
+
+#toggle-btn {display:none; position:absolute; top:16px; right:20px; width:18px; height:24px; background:url(../image/toggle-btn.svg); cursor:pointer; text-indent:-9999px}
+
+/* VISUAL */
+.section--visual {background-image:url(../image/bg.jpg); background-repeat:no-repeat; background-position:bottom left; background-size:cover}
+.section--visual::before {content:""; position:absolute; top:0; left:0; bottom:0; right:0; background:rgba(0,0,0,.3)}
+.section--visual .inner {display:flex; padding:160px 0}
+
+.section--visual .summary {flex:1; margin-right:90px}
+.section--visual .summary__title {font-size:54px; color:#fff; text-shadow:0 1px 1px rgba(0,0,0,.25), 0 1px 25px rgba(0,0,0,.75)}
+.section--visual .summary__description {color:#fff; text-shadow:0 1px 1px rgba(0,0,0,.25), 0 1px 25px rgba(0,0,0,.75)}
+
+#sign-form {width:340px; margin-top:16px}
+#sign-form .input--text {width:100%; height:40px}
+#sign-form li {margin-bottom:17px}
+#sign-form li:last-child {margin-bottom:0}
+#sign-form [type="submit"] {width:100%; height:62px; padding:0 25px; font-size:20px; justify-content:center}
+#sign-form .caption {margin-top:5px; font-size:12px; line-height:1.5; color:rgba(255,255,255,.6); text-align:center}
+
+/* FEATURE */
+.section--feature {padding-top:66px; background:#f5f5f5}
+.section--feature .summary {max-width:820px; margin:0 auto; text-align:center}
+.section--feature .video {max-width:650px; margin:50px auto}
+.section--feature .video .video-ratio {position:relative; height:0; padding-top:56.25%}
+.section--feature .video .video-ratio iframe {position:absolute; left:0; top:0; width:100%; height:100%}
+
+.section--feature .tiles {border-top:1px solid #e5e5e5; border-bottom:1px solid #e5e5e5}
+.section--feature .tiles .inner {max-width:1200px}
+/* .section--feature .tiles ul {display:grid; grid-template-columns:repeat(4, 1fr)} */
+.section--feature .tiles li {float:left; width:25%; padding: 34px 24px; border-right:1px solid #e5e5e5; line-height:1.5; text-align:center; box-sizing:border-box}
+.section--feature .tiles li:last-child {border-right:none}
+.section--feature .tiles li img {max-width:100%; padding:14px 10% 24px; box-sizing:border-box}
+.section--feature .tiles li h3 {font-weight:500; font-size:18px; margin-bottom:10px}
+.section--feature .tiles li p {font-size:14px; color:#767676}
+
+/* WHERE IS */
+.section--where-is .inner {padding-top:80px}
+#map {width:100%; height:400px; margin-top:40px; border:1px solid rgba(0,0,0,.2); border-bottom:none; box-shadow:0 0 20px rgba(0,0,0,.2); box-sizing:border-box}
+
+/* Pricing card */
+.section--pricing {background:linear-gradient(#f5f5f5,#fff)}
+.section--pricing .inner {padding:80px 0}
+.section--pricing .card {display:flex; border:1px solid #e5e5e5; border-radius:6px; box-sizing:border-box}
+.section--pricing .card .cell {display:flex; justify-content:center; align-items:center; padding:24px}
+.section--pricing .card .cell1 .btn {height:50px; font-size:16px}
+.section--pricing .card .cell2 {flex:1; border-left:1px solid #e5e5e5; font-weight:300; font-size:22px; line-height:1.5}
+
+/* FOOTER */
+footer .inner {padding:50px 0; border-top:1px solid #eee}
+footer .site-links {display:flex}
+footer .site-links li {margin-right:10px; font-size:12px; color:#4078c0}
+footer .site-links li a {color:#767676}
+footer .site-links li a:hover {text-decoration:underline}
+footer .logo {position:absolute; top:0; bottom:0; left:0; right:0; margin:auto; width:24px; height:24px}
+footer .logo:hover svg {fill:#4078c0}
